kustomizations/networking/kea-dhcp/dhcp6-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kea-dhcp6
  labels:
    app.kubernetes.io/name: kea-dhcp6
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kea-dhcp6
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kea-dhcp6
    spec:
      hostNetwork: true
      containers:
      - name: kea-dhcp6
        image: jonasal/kea-dhcp6:3.2-alpine
        args: ["-c", "/etc/kea/kea-dhcp6.conf"]
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
        volumeMounts:
        - name: config-volume
          mountPath: /etc/kea/kea-dhcp6.conf
          subPath: kea-dhcp6.conf
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
      nodeSelector:
        kubernetes.io/hostname: catuai
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
        - name: config-volume
          configMap:
            name: kea-config
