kustomizations/networking/kea-dhcp/server-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kea-dhcp
  namespace: networking
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kea-dhcp
  template:
    metadata:
      labels:
        app: kea-dhcp
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      # Contenedor Init para asegurar que las tablas de Kea existan en Postgres antes de iniciar
      containers:
      - name: kea-dhcp4
        image: jonathanm/kea-dhcp:latest
        command: ["kea-dhcp4", "-c", "/etc/kea/kea-dhcp4.conf"]
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "NET_RAW", "NET_BIND_SERVICE"]
        volumeMounts:
        - name: kea-config
          mountPath: /etc/kea
          readOnly: true
      - name: kea-dhcp6
        image: jonathanm/kea-dhcp:latest
        command: ["kea-dhcp6", "-c", "/etc/kea/kea-dhcp6.conf"]
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "NET_RAW", "NET_BIND_SERVICE"]
        volumeMounts:
        - name: kea-config
          mountPath: /etc/kea
          readOnly: true
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
      - name: kea-config
        configMap:
          name: kea-dhcp-config
