kustomizations/networking/kea-dhcp/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kea-postgresql
  labels:
    app.kubernetes.io/name: kea-postgresql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/name: kea-postgresql
