kustomizations/networking/kea-dhcp/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
    type: LoadBalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.21
  selector:
    app: vaultwarden
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
