kustomizations/networking/kea-dhcp/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kea
spec:
  ingressClassName: traefik
  rules:
  - host: dhcp.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kea
              port:
                number: 80
